--- a/input/config.json
+++ b/input/config.json
@@ -1,17 +1,29 @@
 {
-"headers" : [{
-    "id": "date",
-    "title": "Months"
-},
-{
-    "id": "value",
-    "title": "Value"
-},
-{
-    "id": "measure",
-    "title": "Measure"
-}
-],
-"input" : ["Months", "Price ppl","Volume (million litres)","Butterfat (%)","Protein (%)"]
-
+    "headers": [{
+            "id": "date",
+            "title": "Months"
+        },
+        {
+            "id": "value",
+            "title": "Value"
+        },
+        {
+            "id": "measure",
+            "title": "Measure"
+        },
+        {
+            "id": "data123",
+            "title": "Test"
+        }
+    ],
+    "input": ["Months", "Price ppl", "Volume (million litres)", "Butterfat (%)", "Protein (%)"],
+    "additional": [{
+        "title": "date",
+        "value": "Months"
+    }],
+    "dependent": [{
+        "title": "",
+        "ifValue": "",
+        "thenValue": ""
+    }]
 }
